--- a/Student-Productivity/package.json
+++ b/Student-Productivity/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "fullcalendar-interaction": "^5.3.3",
     "ngx-countdown": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
