--- a/Student-Productivity/.gitignore
+++ b/Student-Productivity/.gitignore
@@ -1,11 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+# dependencies
+/node_modules
 
 # Compiled output
 /dist
 /tmp
 /out-tsc
 /bazel-out
-/node_modules
+
 # IDEs and editors
 .idea/
 .project
